@@ -3,18 +3,16 @@ Hash: SHA256
 
 DIST Parse-Evtx-1.1.0.zip 70268 SHA256 24de63b28699433998904785cd28b92972c86e558cabe03851f89203de4ef6e1 SHA512 ec1d717b3b49c9409bc41c135bdb0f1590f388e6060d8ca8ed4e658bdad8c3d9a32c27dc6411b868449a184af287477c5713d25c079840696812d7ad0915e9d1 WHIRLPOOL c66b4ad16bcb2c1ec927176bfa454e4194bd1cbce720baf5469bd72dd72f647dd16218e527a956763e6fb704d0fbfe4e27440a44f11d08b6d82f3cc5522948d5
 DIST Parse-Evtx-1.1.1.zip 71351 SHA256 a1909810bedc709e2fa87f6603e52c62e60086bf1ce064bd839fc5873abf8512 SHA512 308fc3da4e9291f5f84cfbb0a2a17f92d45a2314d6b1806acb59e1a2d521041487a51a6e88e70c03a683df5a9442a30d8dc2483cf684cb96bb86f0a05f27e752 WHIRLPOOL 7f63774477d8497a7e54480341c6c51753c36173acb29d660f99225a9942a0ce77f279f61c63ac3cc8009afa721352daa32e647850e251466887fd8bbb98d07b
-EBUILD evtxtools-1.1.0.ebuild 884 SHA256 77cf02db6539dee98da26ac9ed6febfc8ced5f7f0d4c72d647506092cf2c0007 SHA512 bd17518cdf6da112d2691c820dfe220eb3966a191f7203b02571edfc8bc90d1c2e94ae782d737293979b13580a70dec57bb2f13d216e8f6eed16b84def8600fd WHIRLPOOL 2b15124e65eb79d4eaf252dfb9580261fe0e63547bbbc814765e04c426768fc9ea531db2dc323730678b9243a84dc78b8f334e379b3878fd65e052a29781d0d0
-EBUILD evtxtools-1.1.1.ebuild 877 SHA256 09a1fe13bca7faa40477dc6b2f7b54ed8106faef597df96d0d194d363b754c1e SHA512 5f9a513270024408e45d29069118d89365fd5bcbc747244b8175768d8b92252841c945a340a3d8923ae5d5d2d007894f40af26444b8bb832ca301b5d588b6e18 WHIRLPOOL f5a055c367e7960401c512fa4a562eda866161d6a49821e750712ee3a0f7cba5e2516ebd81dd2befcf34b9014ef5fbf5436e8d2dc15ac14c21b7b91f197c676a
-MISC ChangeLog 1371 SHA256 a251726c4c8e588f9e6e78811575dec43a7a847923c894aa4f481da050464f33 SHA512 1b9ad694dbf0bc740acc9ca39dd4a5bf94c163955866ab01fa338585bbfb20fb3b7e899280a3944c6a4884353d7cff63fa22206ba362cf521cae5701b5ee36c1 WHIRLPOOL 166422c21da9eb77355cee9a49da98453a1d1e3307c1103bb6cbe5447ed149065a20864be55c94aae70871d624586923ca9b2f087d349fb70e689ad5a911d689
+EBUILD evtxtools-1.1.0.ebuild 897 SHA256 1545221249ab91c4147029671ac9b0a52472de70d678f04a024aaef623dead37 SHA512 1734280cbb81520568758ce288178a102de15b40642b30bbdebb5923ce6eb5ba224ce7bcca7fd2aca15de34b9d6322f5d74e39ad759a99c5b111913ee118a3ba WHIRLPOOL 2e6ab70e51f3597e235fc585dcd5603dc6a42da2dd9776760d79018e9d6a0678b214f6026edbcd28349bcf4f79900349f9154147ec969944cad928ec7692ebb1
+EBUILD evtxtools-1.1.1.ebuild 897 SHA256 2ae2b25e6ac9d869866af9edec951f649f72334d4a809f019ccb8f11be470353 SHA512 eee60d30dfd548834a7ad5fdf3a35f14bb34471e2362cde0e4221f4e3ce443bfa61a193655794a33a302b54ced84f71a20ad3f6f11c158ab96ec2368dd73856b WHIRLPOOL 4ef767bf15d38e11a13bc1e300992cb48a2ef8ea2bbae6be266cf6f1561fd2bd3d4084d4b763a5a9ee83a53d77f1469145154e44b80a4c83040ff8b525357c5f
+MISC ChangeLog 1509 SHA256 d29b828ff3463f76c791384de52194fed668e194024541f314b11482a98652a6 SHA512 00119a6ec9bfde108dd962e10e70e61646b028b77eea7d0da1b23444c53fb2bcfd10773aa5ee182f60b64947d2ea2481d4c58e5042eb3eefca4ad7567c93fb8d WHIRLPOOL 8a44599a16a4734bc0a7e3931bea0ee35a0db4897a44291607d92f7efecf612e8d75b39bf2aaa4ccdebb686c33d46e6050db5e4c7d789c644ee9c7bc82c7c475
 MISC metadata.xml 364 SHA256 fb14e9e400ee3bea7d2be534a24ef2dd7fe134b54adf8b62c858bb94b4f696cf SHA512 7b980e02585ed44e027def53b8fbb1c85daf2a46c1581fb1fc6236813cc4dcc42c47f01c879ce38de40601f894e0d4b84b6ad8f9139ae226dd007415c528b6cc WHIRLPOOL 330cce800c5a0386acdd10732a8b90eb311aa32dd0b45c20e4763208444fd158797dedfafabe475522560e85597a4600e159ecbff1e155f9230215503787e093
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRpGVCAAoJECo/aRed9267btUH/3RXUe4nnWxRmLDErLF8f/Oo
-hIEXnDQ85Pqyc9HEVff1u3DXkCt/DPmYSvH0EGIB6B2wq4TNZZ45mduOzRB3w9n/
-WxTDTHKXifUItC8d838hUArVo+Yx9htyVpb+8RLd0Y9GfwoCbllmbudZoH2QWbBC
-sa6Nwd1muTnI9Xdd06OIm/YkB57S1WSJeNpEb2Dguq9hzifw9TrYeRKJ8UIiwHXE
-SIYy8PwzsBLM5SjiXe2i6Hyjgkz434Nh6EZKuodJacj/2t8X09X4ezFixUQR9sbR
-FGdEBX5cekDWXRB00teHHiSi9ssN090EiED3vJ8PsVPN4fGrvYYeZcm2BOWdpGw=
-=3w2+
+iJwEAQEIAAYFAlG0dE8ACgkQG9wOWsQutdZJDAQAneitpaajEAvXqOizCAx8YDFJ
+AuoZqbj5OsI5h66yQlGxOPjDiRgwCUAGkrBvmfOzoIIHffaXrkqnvJozx+RHQsZI
+a8n+Fa8BeucFadVMCMby/7LMq8ePbqy5x/huq0xhzwpGVAqhpc8Ql0WV1RD4QLfE
+0lQVmVOd34OU1HgQN7Q=
+=yTMS
 -----END PGP SIGNATURE-----
