@@ -1,6 +1,6 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/evtxtools/evtxtools-1.1.0.ebuild,v 1.3 2012/03/24 17:37:20 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/evtxtools/evtxtools-1.1.0.ebuild,v 1.4 2013/06/09 12:05:25 zlogene Exp $
 
 EAPI=3
 
@@ -16,7 +16,8 @@ SLOT="0"
 KEYWORDS="amd64 x86"
 IUSE=""
 
-DEPEND="dev-perl/DateTime
+DEPEND="app-arch/unzip
+	dev-perl/DateTime
 	dev-perl/Digest-CRC
 	dev-perl/DateTime
 	dev-perl/Carp-Assert
