@@ -12,13 +12,13 @@ EBUILD gnupg-1.4.13.ebuild 4239 SHA256 926ecef683acf166bfc7ba9b7b232fb8b19b3e25b
 EBUILD gnupg-2.0.19-r1.ebuild 4582 SHA256 44cfdd22b5a2697cfc8d91cd4a6dc5ba64dcfaf506b20b0560ccb58ce61f9a78 SHA512 bbe29c08c6ec1fc27d6ed87736eb4ffdc85802a5a4a5f976e7c2a8b953bb68e056dba3e9b16531f465dbd738922aeb48313db39d4f971b46f3d1335b93945574 WHIRLPOOL cda6bf962f7fdbe6af6af618b931d388b9e91cb015471b772ad78a0948e1c822e6ad9efc17af3d6587d28e562dcb1c9b6f9e2c6b140889b6595bbacb67332045
 EBUILD gnupg-2.0.19-r2.ebuild 4683 SHA256 af9e319c56147412b94e33e84dd3c2d3cfca3ddfd01716b5bdbf1d3644b49b91 SHA512 c45bce3095e84c8dcd71626c8d3b9f83c97ffb9d4073101e33a3959551a8d2b97e64bdbe952c877c0b33d67132d625441efdae2ee57b89a2fe62f8e6b7bae40c WHIRLPOOL 7d56104338e404f50f5fd8161febf2b9ed5638e5256e4d1567921c4982675ab472f09520e9ef92d90d9b3bdebd21e352b32cc43d0aa9d61b73772946ca169b5e
 EBUILD gnupg-2.0.19.ebuild 4472 SHA256 5a5159050703c2cc0831b6b6a7a42e6d1d9a92b3443e5039290fed2b7cfbc5b6 SHA512 48310f5582cf4a95cd20828a7e313bf7bca79e4edbef44ec4f95d048f1f9d7c932f469dc239827f38a3fd6a4b0c5c7624d3f338d8735525a877d623aeb5b0105 WHIRLPOOL 59a01c348c91268690cbc28706d635f511fef2faa2158446a915736652421abb123bf45c9598412b21c8d7b11b5635b55301ec5f44fedce0476eaab7d7e7fd8c
-EBUILD gnupg-2.0.20.ebuild 4583 SHA256 4d57298f1f133b4e51ce093461b0fd9a105f09e57586a5167bec2fe14eadef9a SHA512 eda7a1709bd1e3a5833ed0b88d9ba101991a8ca9d26a0ed0c7a4f8706bcf1aeb4ab4ad439297e849108f38922fabd00618d2a6c50a380068ede3979b2b9b5b5b WHIRLPOOL ed05abbfc12a359379786cd3dc193c728a23a5789f6e8b58307d6fe3b329c11259940bbad648956b9a8932e510889001bb4fdbe9af8df8e7ca4bf3115ebc4d7e
-MISC ChangeLog 69562 SHA256 a96608e51ac9269b8fabf4e1c73da8f880cbf5f546f73603c7ef3e8cf1709cf2 SHA512 891ad4024f9c521d1333351a5a5ca5757ea21c85fab44e459fa2b97ac14502bba1a1e3e9c3a0f6af7881e330408928e6bfea6a32a9b0f0b62371c5f1c73d82dc WHIRLPOOL 0b3f57d4631c1d0ff4db444aac91c2bb47e465712933d46911e39901d9785b1d86833b078cf53bcfb2e24e3b63e6e2650d6ede9f4e570dfc633c38e7383c8dc9
+EBUILD gnupg-2.0.20.ebuild 4585 SHA256 f87b2ff688c3fad04e57980413bb58bdf37a8bbb4c5200335a4864d6a77bb56b SHA512 15b008928bf055184a484818aa73506504a521a13aa5046d54c2525dadbc2e06da236567d9a525a00937a71f6c5ffa6a76cd29277344d019448031ed04bcf085 WHIRLPOOL d45913ba7800f688e94980c62cdfe9d95a4d1494f0f03b68ded02ba373b96d4b9c58496bfa4fb55dfc0c199cee3099e3793d57222f63c3f4ad4edb69d9971f2d
+MISC ChangeLog 69661 SHA256 961027cbefa05724cb6428a1e424c271f3e807aa735700d3633ed91a31c6642b SHA512 a78e2917edfa165b94830ad985cd12c6e229ef62d8b3a742f6111388d1da18801e1100f520e928ec7a776a18ec4ef7c951b6fc78cde99cc0461ff3a5e4e8b94a WHIRLPOOL c35031d4c67197928d5fc0e754979fb8554761cd2ce79edbe52d43128c310cf55766968d0e01132601ea2f3490b8cb9ee4306bc499baa5a0741d937df2aeba2a
 MISC metadata.xml 1078 SHA256 6d0df2861d7b3fc7777f9c703b06f789a8e4e4d08a98b1f5f5cc661943a5b7e0 SHA512 2998315ea1dad11806385d84827189efb626620d6596bf51a67180567a5ed3cbcb5eea50de907477b93d876ce66fb7e944cce159fe29450a301cda9bdd76db87 WHIRLPOOL fc0761ee1950b067a4434192c22b3d516017b539694e3615f9429ad8b05ace449e8d9abf01086baf91eb93cb9ad4fe2c37467b0313ccaf0411a99be63a7440e9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlGshqQACgkQVWmRsqeSphM34wCfWQyi3y/Qh02nmqEkk9BQIfKu
-1uMAni3lGoPDCQeZ9eG6J34XbT7YUH2e
-=HusV
+iEYEAREIAAYFAlG0TaIACgkQkKaRLQcq0GKHHACdFvScH9NwWpDkEBjp9CWkzCBj
+UuoAoK6kzh5dTtqrixUy6WQrGccZjbzM
+=he1b
 -----END PGP SIGNATURE-----
