@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/evtxtools
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/evtxtools/ChangeLog,v 1.9 2013/05/28 08:05:59 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/evtxtools/ChangeLog,v 1.10 2013/06/09 12:05:25 zlogene Exp $
+
+  09 Jun 2013; Mikle Kolyada <zlogene@gentoo.org> evtxtools-1.1.0.ebuild,
+  evtxtools-1.1.1.ebuild:
+  add missing DEPEND: app-arch/unzip
 
   28 May 2013; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
   Assign new maintainer
